--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.7.2
+dj-database-url==2.1.0
 Django==5.0.1
 mysql==0.0.3
 mysqlclient==2.2.1
 sqlparse==0.4.4
+typing_extensions==4.9.0
 tzdata==2023.4
