--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,28 @@
 {
+    "version": 2,
     "builds": [
-        {
-            "src": "push/wsgi.py",
-            "use": "@vercel/python",
-            "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+      {
+        "src": "push/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+      },
+      {
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "staticfiles_build"
         }
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "push/wsgi.py"
-        }
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "push/wsgi.py"
+      }
     ]
-}
+  }
+  
